Shading jar, gitignore, mounting improvements, properties